убрал секреты из кода, добавил .env файлы