@@ -20,7 +20,6 @@ import dev.serverpanel.plugin.api.ApiClient;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
@@ -33,14 +32,14 @@ public class AtmSession {
     private final ServerPanelPlugin plugin;
     private final Player player;
     private final int balance;
-    private final List<FineEntry> fines = new ArrayList<FineEntry>();
+    private final List<FineEntry> activeFines = new ArrayList<FineEntry>();
     private Inventory inv;
-    private static final int SLOT_BALANCE = 4;
-    private static final int SLOT_DEPOSIT_1 = 19;
-    private static final int SLOT_DEPOSIT_8 = 20;
-    private static final int SLOT_DEPOSIT_32 = 21;
-    private static final int SLOT_DEPOSIT_64 = 22;
-    private static final int SLOT_FINES_START = 27;
+    private boolean switchingToFines = false;
+    private static final int SLOT_DEPOSIT = 10;
+    private static final int SLOT_BALANCE = 13;
+    private static final int SLOT_WITHDRAW = 16;
+    private static final int SLOT_FINES = 22;
+    private static final int SLOT_INFO = 26;
 
     public AtmSession(ServerPanelPlugin plugin, Player player, ApiClient.ApiResponse balResp, ApiClient.ApiResponse finesResp) {
         this.plugin = plugin;
@@ -50,50 +49,80 @@ public class AtmSession {
             JsonArray arr = finesResp.data.getAsJsonArray("fines");
             arr.forEach(el -> {
                 JsonObject obj = el.getAsJsonObject();
-                if (!obj.has("status") || !obj.get("status").getAsString().equals("pending")) {
-                    return;
-                }
-                this.fines.add(new FineEntry(obj.get("id").getAsInt(), obj.get("amount").getAsInt(), obj.get("reason").getAsString(), obj.get("deadline").getAsString()));
+                String status = obj.has("status") ? obj.get("status").getAsString() : "pending";
+                this.activeFines.add(new FineEntry(obj.get("id").getAsInt(), obj.get("amount").getAsInt(), obj.get("reason").getAsString(), obj.get("deadline").getAsString(), status));
             });
         }
     }
 
     public Inventory buildInventory() {
-        int i;
-        int rows = this.fines.isEmpty() ? 4 : Math.min(6, 4 + (int)Math.ceil((double)this.fines.size() / 9.0));
-        this.inv = Bukkit.createInventory(null, (int)(rows * 9), (String)"\u00a78\u00a7l\ud83c\udfe6 \u0411\u0430\u043d\u043a\u043e\u043c\u0430\u0442");
-        ItemStack pane = this.makeItem(Material.GRAY_STAINED_GLASS_PANE, "\u00a7r", List.of());
-        for (i = 0; i < this.inv.getSize(); ++i) {
+        this.inv = plugin.getServer().createInventory(null, 27, "§a§lБанкомат");
+        ItemStack pane = this.makeItem(Material.GRAY_STAINED_GLASS_PANE, "§r", List.of());
+        for (int i = 0; i < this.inv.getSize(); ++i) {
             this.inv.setItem(i, pane);
         }
-        this.inv.setItem(4, this.makeItem(Material.DIAMOND, "\u00a7b\u00a7l\u0412\u0430\u0448 \u0431\u0430\u043b\u0430\u043d\u0441", List.of("\u00a77" + this.balance + " \u0430\u043b\u043c\u0430\u0437\u043e\u0432")));
-        this.inv.setItem(19, this.depositBtn(1));
-        this.inv.setItem(20, this.depositBtn(8));
-        this.inv.setItem(21, this.depositBtn(32));
-        this.inv.setItem(22, this.depositBtn(64));
-        this.inv.setItem(13, this.makeItem(Material.BOOK, "\u00a7e\u00a7l\u041a\u0430\u043a \u043f\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u044c", List.of("\u00a77\u041f\u043e\u043b\u043e\u0436\u0438\u0442\u0435 \u0430\u043b\u043c\u0430\u0437\u044b \u0432 \u0438\u043d\u0432\u0435\u043d\u0442\u0430\u0440\u044c", "\u00a77\u0438 \u043d\u0430\u0436\u043c\u0438\u0442\u0435 \u043a\u043d\u043e\u043f\u043a\u0443 \u0434\u0435\u043f\u043e\u0437\u0438\u0442\u0430.")));
-        if (!this.fines.isEmpty()) {
-            this.inv.setItem(27, this.makeItem(Material.RED_BANNER, "\u00a7c\u00a7l\u0412\u0430\u0448\u0438 \u0448\u0442\u0440\u0430\u0444\u044b", List.of("\u00a77\u041d\u0430\u0436\u043c\u0438\u0442\u0435 \u043d\u0430 \u0448\u0442\u0440\u0430\u0444 \u0447\u0442\u043e\u0431\u044b \u043e\u043f\u043b\u0430\u0442\u0438\u0442\u044c")));
-            for (i = 0; i < this.fines.size() && i < 8; ++i) {
-                FineEntry fine = this.fines.get(i);
-                this.inv.setItem(28 + i, this.makeItem(Material.PAPER, "\u00a7c\u00a7l\u0428\u0442\u0440\u0430\u0444 #" + fine.id, List.of("\u00a77\u0421\u0443\u043c\u043c\u0430: \u00a7c" + fine.amount + " \u0430\u043b\u043c\u0430\u0437\u043e\u0432", "\u00a77\u041f\u0440\u0438\u0447\u0438\u043d\u0430: \u00a7f" + fine.reason, "\u00a77\u0414\u0435\u0434\u043b\u0430\u0439\u043d: \u00a7e" + fine.deadline, "", "\u00a7a\u041d\u0430\u0436\u043c\u0438\u0442\u0435 \u0447\u0442\u043e\u0431\u044b \u043e\u043f\u043b\u0430\u0442\u0438\u0442\u044c")));
-            }
-        }
+
+        // Слот 10 — пополнение
+        ItemStack deposit = new ItemStack(Material.LIME_CONCRETE);
+        ItemMeta depositMeta = deposit.getItemMeta();
+        depositMeta.setDisplayName("§a§lПополнить");
+        depositMeta.setLore(Arrays.asList("§7Положите алмазы в инвентарь", "§7и нажмите для выбора суммы"));
+        deposit.setItemMeta(depositMeta);
+        this.inv.setItem(10, deposit);
+
+        // Слот 4 — баланс
+        ItemStack balance = new ItemStack(Material.DIAMOND);
+        ItemMeta balanceMeta = balance.getItemMeta();
+        balanceMeta.setDisplayName("§b§lБаланс");
+        balanceMeta.setLore(Arrays.asList("§7Текущий баланс:", "§e" + this.balance + " алмазов"));
+        balance.setItemMeta(balanceMeta);
+        this.inv.setItem(13, balance);
+
+        // Слот 8 — снятие
+        ItemStack withdraw = new ItemStack(Material.RED_CONCRETE);
+        ItemMeta withdrawMeta = withdraw.getItemMeta();
+        withdrawMeta.setDisplayName("§c§lСнять");
+        withdrawMeta.setLore(Arrays.asList("§7Нажмите и введите", "§7количество в чат"));
+        withdraw.setItemMeta(withdrawMeta);
+        this.inv.setItem(16, withdraw);
+
+        // Слот 18 — штрафы
+        ItemStack finesBtn = new ItemStack(Material.PAPER);
+        ItemMeta finesMeta = finesBtn.getItemMeta();
+        finesMeta.setDisplayName("§c§lАктивные штрафы");
+        finesMeta.setLore(Arrays.asList(
+            "§7Количество: §e" + this.activeFines.size(),
+            "§7Нажмите для просмотра"
+        ));
+        finesBtn.setItemMeta(finesMeta);
+        this.inv.setItem(22, finesBtn);
+
+        // Слот 26 — информация
+        ItemStack info = new ItemStack(Material.BOOK);
+        ItemMeta infoMeta = info.getItemMeta();
+        infoMeta.setDisplayName("§f§lИнформация");
+        infoMeta.setLore(Arrays.asList(
+            "§7Команды:",
+            "§e/bank §7— открыть банкомат",
+            "§e/bank pay <ник> <сумма> §7— перевод",
+            "§e/bank balance §7— баланс",
+            "",
+            "§7Пополнение:",
+            "§7Возьмите алмазы в руку и",
+            "§7нажмите §eПополнить"
+        ));
+        info.setItemMeta(infoMeta);
+        this.inv.setItem(26, info);
+
         return this.inv;
     }
 
     public void handleClick(int slot, ItemStack item) {
-        int idx;
-        if (slot == 19) {
-            this.doDeposit(1);
-        } else if (slot == 20) {
-            this.doDeposit(8);
-        } else if (slot == 21) {
-            this.doDeposit(32);
-        } else if (slot == 22) {
-            this.doDeposit(64);
-        } else if (slot >= 28 && !this.fines.isEmpty() && (idx = slot - 27 - 1) >= 0 && idx < this.fines.size()) {
-            this.doPayFine(this.fines.get(idx));
+        switch (slot) {
+            case 10: this.handleDeposit(); break;
+            case 16: this.handleWithdraw(); break;
+            case 22: this.openFinesMenu(); break;
+            // 13 (баланс) и 26 (информация) — без действия
         }
     }
 
@@ -118,7 +147,65 @@ public class AtmSession {
         });
     }
 
-    private void doPayFine(FineEntry fine) {
+    public void openFinesMenu() {
+        int rows = Math.max(2, (int) Math.ceil((activeFines.size() + 1) / 9.0) + 1);
+        Inventory finesInv = plugin.getServer().createInventory(null, rows * 9, "§c§lШтрафы");
+
+        ItemStack gray = new ItemStack(Material.GRAY_STAINED_GLASS_PANE);
+        ItemMeta grayMeta = gray.getItemMeta();
+        grayMeta.setDisplayName("§r");
+        gray.setItemMeta(grayMeta);
+        for (int i = 0; i < rows * 9; i++) finesInv.setItem(i, gray);
+
+        if (activeFines.isEmpty()) {
+            ItemStack none = new ItemStack(Material.LIME_CONCRETE);
+            ItemMeta noneMeta = none.getItemMeta();
+            noneMeta.setDisplayName("§aШтрафов нет!");
+            none.setItemMeta(noneMeta);
+            finesInv.setItem(4, none);
+        } else {
+            int slot = 0;
+            for (FineEntry fine : activeFines) {
+                ItemStack fineItem = new ItemStack(Material.PAPER);
+                ItemMeta fineMeta = fineItem.getItemMeta();
+                fineMeta.setDisplayName("§c§lШтраф #" + fine.id());
+                String statusLine;
+                if (fine.status().equals("paid")) {
+                    statusLine = "§aОплачен";
+                } else if (fine.status().equals("overdue")) {
+                    statusLine = "§cПросрочен — выдан варн";
+                } else {
+                    statusLine = "§eНажмите для оплаты";
+                }
+                fineMeta.setLore(Arrays.asList(
+                    "§7Причина: §f" + fine.reason(),
+                    "§7Сумма: §e" + fine.amount() + " алмазов",
+                    "§7Осталось: §f" + getTimeLeft(fine.deadline()),
+                    "",
+                    statusLine
+                ));
+                fineItem.setItemMeta(fineMeta);
+                finesInv.setItem(slot, fineItem);
+                slot++;
+            }
+        }
+
+        ItemStack back = new ItemStack(Material.ARROW);
+        ItemMeta backMeta = back.getItemMeta();
+        backMeta.setDisplayName("§f§lНазад");
+        back.setItemMeta(backMeta);
+        finesInv.setItem(rows * 9 - 1, back);
+
+        this.switchingToFines = true;
+        player.openInventory(finesInv);
+    }
+
+    public Player getPlayer() { return player; }
+    public List<FineEntry> getActiveFines() { return activeFines; }
+    public boolean isSwitchingToFines() { return switchingToFines; }
+    public void resetSwitchingToFines() { this.switchingToFines = false; }
+
+    public void doPayFine(FineEntry fine) {
         this.player.closeInventory();
         this.plugin.getServer().getScheduler().runTaskAsynchronously((Plugin)this.plugin, () -> {
             ApiClient.ApiResponse resp = this.plugin.getApiClient().payFine(this.player.getUniqueId().toString(), fine.id);
@@ -136,14 +223,96 @@ public class AtmSession {
         return this.inv != null && this.inv.equals((Object)other);
     }
 
-    private ItemStack depositBtn(int amount) {
-        ItemStack item = new ItemStack(Material.DIAMOND, amount);
-        ItemMeta meta = item.getItemMeta();
-        meta.setDisplayName("\u00a7b\u00a7l\u0412\u043d\u0435\u0441\u0442\u0438 " + amount + " \u0430\u043b\u043c\u0430\u0437\u043e\u0432");
-        meta.setLore(List.of("\u00a77\u041d\u0430\u0436\u043c\u0438\u0442\u0435 \u0447\u0442\u043e\u0431\u044b \u043f\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u044c \u0431\u0430\u043b\u0430\u043d\u0441"));
-        meta.addItemFlags(new ItemFlag[]{ItemFlag.HIDE_ATTRIBUTES});
-        item.setItemMeta(meta);
-        return item;
+    private void handleDeposit() {
+        player.closeInventory();
+        player.sendMessage("§aВведите количество алмазов для пополнения:");
+        plugin.getServer().getPluginManager().registerEvents(new org.bukkit.event.Listener() {
+            @org.bukkit.event.EventHandler
+            public void onChat(org.bukkit.event.player.AsyncPlayerChatEvent event) {
+                if (!event.getPlayer().equals(player)) return;
+                event.setCancelled(true);
+                org.bukkit.event.HandlerList.unregisterAll(this);
+                try {
+                    int amount = Integer.parseInt(event.getMessage().trim());
+                    if (amount <= 0) {
+                        player.sendMessage("§cНеверное количество");
+                        return;
+                    }
+                    doDeposit(amount);
+                } catch (NumberFormatException e) {
+                    player.sendMessage("§cВведите число");
+                }
+            }
+        }, plugin);
+    }
+
+    private void handleWithdraw() {
+        player.closeInventory();
+        player.sendMessage("§aВведите количество алмазов для снятия:");
+
+        // Слушаем следующее сообщение игрока
+        plugin.getServer().getPluginManager().registerEvents(new org.bukkit.event.Listener() {
+            @org.bukkit.event.EventHandler
+            public void onChat(org.bukkit.event.player.AsyncPlayerChatEvent event) {
+                if (!event.getPlayer().equals(player)) return;
+                event.setCancelled(true);
+                org.bukkit.event.HandlerList.unregisterAll(this);
+
+                try {
+                    int amount = Integer.parseInt(event.getMessage().trim());
+                    if (amount <= 0) {
+                        player.sendMessage("§cНеверное количество");
+                        return;
+                    }
+                    doWithdraw(amount);
+                } catch (NumberFormatException e) {
+                    player.sendMessage("§cВведите число");
+                }
+            }
+        }, plugin);
+    }
+
+    private void doWithdraw(int amount) {
+        player.sendMessage("§7[Debug] Отправляю запрос: ник=" + player.getName() + " сумма=" + amount);
+        plugin.getServer().getScheduler().runTaskAsynchronously(plugin, () -> {
+            ApiClient.ApiResponse resp = plugin.getApiClient().withdraw(player.getName(), amount);
+            plugin.getServer().getScheduler().runTask(plugin, () -> {
+                player.sendMessage("§7[Debug] код=" + resp.code + " ответ=" + resp.data.toString());
+                if (resp.isSuccess()) {
+                    // Выдаём алмазы игроку
+                    ItemStack diamonds = new ItemStack(Material.DIAMOND, amount);
+                    player.getInventory().addItem(diamonds);
+                    player.sendMessage("§aВы сняли §e" + amount + " §aалмазов. Новый баланс: §e" + resp.getInt("balance"));
+                } else {
+                    player.sendMessage("§cОшибка: " + resp.getMessage());
+                }
+            });
+        });
+    }
+
+    private String getTimeLeft(String deadline) {
+        try {
+            java.time.LocalDateTime deadlineTime = java.time.LocalDateTime.parse(
+                deadline.replace(" ", "T").substring(0, 19)
+            );
+            java.time.LocalDateTime now = java.time.LocalDateTime.now();
+            if (now.isAfter(deadlineTime)) return "§cПросрочен";
+
+            java.time.Duration diff = java.time.Duration.between(now, deadlineTime);
+            long hours = diff.toHours();
+            long minutes = diff.toMinutesPart();
+
+            if (hours >= 24) {
+                long days = diff.toDays();
+                return "§e" + days + " дн. " + (hours % 24) + " ч.";
+            } else if (hours > 0) {
+                return "§e" + hours + " ч. " + minutes + " мин.";
+            } else {
+                return "§c" + minutes + " мин.";
+            }
+        } catch (Exception e) {
+            return "§7" + deadline;
+        }
     }
 
     private ItemStack makeItem(Material mat, String name, List<String> lore) {
@@ -156,7 +325,7 @@ public class AtmSession {
         return item;
     }
 
-    public record FineEntry(int id, int amount, String reason, String deadline) {
+    public record FineEntry(int id, int amount, String reason, String deadline, String status) {
     }
 }
 
